# rightmodeler

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/pipeline/: README.md  package.json  pyproject.toml
apps/pipeline/src/pipeline/: __init__.py  __main__.py  corpus.py  diagnosis.py  drift.py  evaluate.py  freeform.py  remediation.py  repo_fix.py  scorecards.py  snapshot.py  structured.py  trajectory.py
apps/pipeline/tests/: test_diagnosis.py  test_drift.py  test_evaluate.py  test_pipeline.py  test_remediation.py
docs/: PRD.md  README.md  design.md  eval-engine-spike.md
skills/cheaper-models/: SKILL.md  package.json  pyproject.toml  requirements.txt
skills/cheaper-models/reference/: judge.md  openrouter.md  replay.md  trace-formats.md
skills/cheaper-models/scripts/: analyze.py  common.py  ingest.py  judge.py  openrouter.py  orchestrate.py  preflight.py  replay_step.py  report.py  run_pipeline.py  shortlist.py  smoke.py  tui.py
skills/rightmodeler/: SKILL.md  package.json  pyproject.toml  requirements.txt
skills/rightmodeler/reference/: corpus-reconstruction.md  judge.md  openrouter.md  replay.md  trace-formats.md
skills/rightmodeler/reference/providers/: litellm.md  openrouter.md  vercel-ai-gateway.md
skills/rightmodeler/scripts/: agent.py  agent_ledger.py  analyze.py  capture.py  common.py  ingest.py  judge.py  openrouter.py  orchestrate.py  preflight.py  provider.py  replay.py  replay_step.py  report.py  run_pipeline.py  shortlist.py  smoke.py  tui.py  workflow.py
(+157 files in other folders)
