[project]
name = "pipeline"
version = "0.1.0"
description = "Batch pipeline for cheaper-model analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.25.0,<5",
]

[dependency-groups]
dev = [
  "ruff>=0.12.0,<0.13",
  "pytest>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
