[project]
name = "rightmodeler-skill"
version = "0.1.0"
description = "Publishable rightmodeler skill runtime"
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
  "textual>=0.79",
]

[dependency-groups]
dev = [
  "ruff>=0.12.0,<0.13",
]

[tool.ruff]
line-length = 100
target-version = "py310"
